# lolesports_stats

./: .gitignore  CHANGELOG.md  Makefile  README.md  game.proto  pyproject.toml
src/: app.yaml  game.py  lol.py  main.py  requirements.txt  riot_api.py  utils.py
